src/test/resources/30/single/xhtml/valid/mathml.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
    <head>
        <title>Math ML</title>
    </head>
    <body>
        <p><mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML" alttext="dummy">
            <mml:mrow>
                <mml:msup>
                    <mml:mi>a</mml:mi>
                    <mml:mn>2</mml:mn>
                </mml:msup>
                <mml:mo>=</mml:mo>
                <mml:msup>
                    <mml:mi>b</mml:mi>
                    <mml:mn>2</mml:mn>
                </mml:msup>
                <mml:mo>+</mml:mo>
                <mml:msup id="foo">
                    <mml:mi>c</mml:mi>
                    <mml:mn>2</mml:mn>
                </mml:msup>
                <mml:mspace indenttarget="foo" indentalign="id"></mml:mspace>
            </mml:mrow>
        </mml:math>
        </p>
    </body>
</html>